--- a/front/Html/Cadastro.html
+++ b/front/Html/Cadastro.html
@@ -13,7 +13,7 @@
     <div class="decorative-border"></div>
 
     <div class="botaoVoltar">
-      <a class="buttonVoltar" href="../index.html">Voltar</a>
+      <a class="buttonVoltar" href="./Menu.html">Voltar</a>
     </div>
 
     <main class="main-content">
