--- a/front/Html/Emprestimos.html
+++ b/front/Html/Emprestimos.html
@@ -21,10 +21,7 @@
             <i class="fas fa-tools"></i> <span>Controle de Empréstimos</span>
           </h2>
         </div>
-        <div
-          class="menu-item"
-          onclick="window.location.href='Usuarios.html'"
-        >
+        <div class="menu-item" onclick="window.location.href='Usuarios.html'">
           <i class="fas fa-user"></i> <span>Usuários</span>
         </div>
         <div
@@ -39,20 +36,14 @@
         >
           <i class="fas fa-toolbox"></i> <span>Ferramentas</span>
         </div>
-        <div
-          class="menu-item"
-          onclick="window.location.href='Local.html'"
-        >
+        <div class="menu-item" onclick="window.location.href='Local.html'">
           <i class="fas fa-map-marker-alt"></i> <span>Locais</span>
         </div>
-        <div
-          class="menu-item"
-          id="novo-emprestimo-btn"
-        >
+        <div class="menu-item" id="novo-emprestimo-btn">
           <i class="fas fa-plus-circle"></i> <span>Novo Empréstimo</span>
         </div>
 
-        <div class="menu-item" onclick="window.location.href='../index.html'">
+        <div class="menu-item" onclick="window.location.href='./Menu.html'">
           <i class="fas fa-sign-out-alt"></i> <span>Sair</span>
         </div>
       </div>
@@ -63,10 +54,7 @@
           <h1 class="page-title">
             <i class="fas fa-history"></i> Histórico de Empréstimos
           </h1>
-          <button
-            class="logout-btn"
-            onclick="window.location.href='Menu.html'"
-          >
+          <button class="logout-btn" onclick="window.location.href='Menu.html'">
             <i class="fas fa-sign-out-alt"></i> Sair para Menu
           </button>
         </div>
