--- a/front/Html/Ferramentas.html
+++ b/front/Html/Ferramentas.html
@@ -19,10 +19,7 @@
         <div class="logo">
           <h2><i class="fas fa-tools"></i> Controle de Ferramentas</h2>
         </div>
-        <div
-          class="menu-item"
-          onclick="window.location.href='Usuarios.html'"
-        >
+        <div class="menu-item" onclick="window.location.href='Usuarios.html'">
           <i class="fas fa-user"></i> Usuários
         </div>
 
@@ -35,29 +32,20 @@
         <div class="menu-item active">
           <i class="fas fa-toolbox"></i> Ferramentas
         </div>
-        <div
-          class="menu-item"
-          onclick="window.location.href='Local.html'"
-        >
+        <div class="menu-item" onclick="window.location.href='Local.html'">
           <i class="fas fa-map-marker-alt"></i> Locais
         </div>
-        <div
-          class="menu-item"
-          onclick="window.location.href='PostEmp.html'"
-        >
+        <div class="menu-item" onclick="window.location.href='PostEmp.html'">
           <i class="fas fa-plus-circle"></i> Novo Empréstimo
         </div>
-        <div class="menu-item" onclick="window.location.href='../index.html'">
+        <div class="menu-item" onclick="window.location.href='./Menu.html'">
           <i class="fas fa-sign-out-alt"></i> Sair
         </div>
       </div>
 
       <!-- Conteúdo Principal - Página de Ferramentas -->
       <div class="main-content">
-        <div
-          class="header"
-          onclick="window.location.href='Menu.html'"
-        >
+        <div class="header" onclick="window.location.href='Menu.html'">
           <h1 class="page-title">
             <i class="fas fa-toolbox"></i> Ferramentas Cadastradas
           </h1>
@@ -218,6 +206,5 @@
     <div id="loading-overlay" class="loading-overlay" style="display: none">
       <div class="loading-spinner"></div>
     </div>
-    
   </body>
 </html>
