--- a/front/Html/Menu.html
+++ b/front/Html/Menu.html
@@ -9,6 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
       rel="stylesheet"
     />
+    <script src="../Scripts/MenuProfessor.js" defer></script>
     <link rel="stylesheet" href="../Style/Menu.css" />
   </head>
   <body>
@@ -68,6 +69,6 @@
       </div>
     </div>
 
-    <a href="../index.html" class="logout-btn" id="logout">Sair</a>
+    <a class="logout-btn" id="logout">Sair</a>
   </body>
 </html>
