--- a/front/Html/Usuarios.html
+++ b/front/Html/Usuarios.html
@@ -39,20 +39,14 @@
           <i class="fas fa-toolbox"></i> Ferramentas
         </div>
 
-        <div
-          class="menu-item"
-          onclick="window.location.href='Local.html'"
-        >
+        <div class="menu-item" onclick="window.location.href='Local.html'">
           <i class="fas fa-map-marker-alt"></i> Locais
         </div>
 
-        <div
-          class="menu-item"
-          onclick="window.location.href='PostEmp.html'"
-        >
+        <div class="menu-item" onclick="window.location.href='PostEmp.html'">
           <i class="fas fa-plus-circle"></i> Novo Empréstimo
         </div>
-        <div class="menu-item" onclick="window.location.href='../index.html'">
+        <div class="menu-item" onclick="window.location.href='./Menu.html'">
           <i class="fas fa-sign-out-alt"></i> Sair
         </div>
       </div>
@@ -60,10 +54,7 @@
       <div class="main-content">
         <div class="header">
           <h1 class="page-title"><i class="fas fa-user"></i> Usuários</h1>
-          <button
-            class="logout-btn"
-            onclick="window.location.href='Menu.html'"
-          >
+          <button class="logout-btn" onclick="window.location.href='Menu.html'">
             <i class="fas fa-sign-out-alt"></i> Sair para Menu
           </button>
         </div>
@@ -142,9 +133,15 @@
                     <label for="class">Turma</label>
                     <select id="class" class="form-control" required>
                       <option value="">Selecione uma turma</option>
-                      <option value="Mecânico de Manutenção">Mecânico de Manutenção</option>
-                      <option value="Mecânico de Usinagem">Mecânico de Usinagem</option>
-                      <option value="Desenvolvimento de Sistema">Desenvolvimento de Sistema</option>
+                      <option value="Mecânico de Manutenção">
+                        Mecânico de Manutenção
+                      </option>
+                      <option value="Mecânico de Usinagem">
+                        Mecânico de Usinagem
+                      </option>
+                      <option value="Desenvolvimento de Sistema">
+                        Desenvolvimento de Sistema
+                      </option>
                     </select>
                   </div>
                   <div class="form-group">
