--- a/front/Html/Local.html
+++ b/front/Html/Local.html
@@ -43,7 +43,7 @@
         <div class="menu-item" onclick="window.location.href='PostEmp.html'">
           <i class="fas fa-plus-circle"></i> Novo Empréstimo
         </div>
-        <div class="menu-item" onclick="window.location.href='../index.html'">
+        <div class="menu-item" onclick="window.location.href='./Menu.html'">
           <i class="fas fa-sign-out-alt"></i> Sair
         </div>
       </div>
