--- a/front/Html/PostEmp.html
+++ b/front/Html/PostEmp.html
@@ -19,10 +19,7 @@
         <div class="logo">
           <h2><i class="fas fa-tools"></i> <span>Fazer Empréstimos</span></h2>
         </div>
-        <div
-          class="menu-item"
-          onclick="window.location.href='Usuarios.html'"
-        >
+        <div class="menu-item" onclick="window.location.href='Usuarios.html'">
           <i class="fas fa-user"></i> <span>Usuários</span>
         </div>
         <div
@@ -37,10 +34,7 @@
         >
           <i class="fas fa-toolbox"></i> <span>Ferramentas</span>
         </div>
-        <div
-          class="menu-item"
-          onclick="window.location.href='Local.html'"
-        >
+        <div class="menu-item" onclick="window.location.href='Local.html'">
           <i class="fas fa-map-marker-alt"></i> <span>Locais</span>
         </div>
         <div
@@ -49,7 +43,7 @@
         >
           <i class="fas fa-plus-circle"></i> <span>Novo Empréstimo</span>
         </div>
-        <div class="menu-item" onclick="window.location.href='../index.html'">
+        <div class="menu-item" onclick="window.location.href='./Menu.html'">
           <i class="fas fa-sign-out-alt"></i> <span>Sair</span>
         </div>
       </div>
@@ -121,9 +115,9 @@
 
             <div class="form-group">
               <label for="data-devolucao"
-                ><i class="fas fa-arrow-down"></i> Data de Devolução </label
-              >
-              <input type="datetime-local" id="data-devolucao"/>
+                ><i class="fas fa-arrow-down"></i> Data de Devolução
+              </label>
+              <input type="datetime-local" id="data-devolucao" />
             </div>
           </div>
 
@@ -144,9 +138,7 @@
             </div>
             <div class="status-item">
               <span class="status-label">Professor Responsável:</span>
-              <span class="status-value" id="professor-display"
-                ></span
-              >
+              <span class="status-value" id="professor-display"></span>
             </div>
             <div class="status-item">
               <span class="status-label">Data/Hora do Registro:</span>
