--- a/front/Html/QrCode.html
+++ b/front/Html/QrCode.html
@@ -11,26 +11,19 @@
   </head>
   <body>
     <div class="decorative-border"></div>
-
     <div class="login-container">
       <h1>Empréstimo com QrCode</h1>
-
       <div class="qr-scan-widget">
         <video id="video" autoplay playsinline muted></video>
         <div class="scan-animation-overlay"></div>
         <div class="scanning-line-effect"></div>
       </div>
-
       <p id="mensagem">Posicione o QrCode da Ferramenta...</p>
-
-      <div class="botaoProf">
-        <a href="../index.html" class="buttonVoltar">Voltar</a>
+      <div class="botao">
+        <a href="../index.html" id="btn-voltar">Voltar</a>
       </div>
     </div>
-
-    <!-- Feedback -->
     <div id="feedback" class="feedback"></div>
-
     <div class="loading-overlay">
       <div class="loading-spinner"></div>
     </div>
