--- a/front/Html/Usuarios.html
+++ b/front/Html/Usuarios.html
@@ -59,14 +59,6 @@
           </button>
         </div>
 
-        <!-- Botões de Ação -->
-        <div class="action-buttons">
-          <button class="btn btn-primary" onclick="openAddStudentModal()">
-            <i class="fas fa-plus"></i> Adicionar Usuário
-          </button>
-        </div>
-
-        <!-- Filtros e Pesquisa -->
         <div class="search-section">
           <div class="search-group">
             <i class="fas fa-search"></i>
@@ -91,9 +83,7 @@
                 <th>Ações</th>
               </tr>
             </thead>
-            <tbody id="students-table-body">
-              <!-- Dados serão carregados via JavaScript -->
-            </tbody>
+            <tbody id="students-table-body"></tbody>
           </table>
         </div>
 
@@ -131,29 +121,21 @@
                 <div class="form-row">
                   <div class="form-group">
                     <label for="class">Turma</label>
-                    <select id="class" class="form-control" required>
-                      <option value="">Selecione uma turma</option>
-                      <option value="Mecânico de Manutenção">
-                        Mecânico de Manutenção
-                      </option>
-                      <option value="Mecânico de Usinagem">
-                        Mecânico de Usinagem
-                      </option>
-                      <option value="Desenvolvimento de Sistema">
-                        Desenvolvimento de Sistema
-                      </option>
-                    </select>
+                    <input
+                      type="text"
+                      id="class"
+                      class="form-control"
+                      placeholder="Ex: Desenvolvimento de Sistema"
+                      required
+                    />
                   </div>
                   <div class="form-group">
                     <label for="user-type">Tipo de Usuário</label>
-                    <input
-                      type="text"
-                      id="user-type"
-                      class="form-control"
-                      readonly
-                      disabled
-                      style="background-color: #f5f5f5; cursor: not-allowed"
-                    />
+                    <select id="user-type" class="form-control" required>
+                      <option value="">Selecione o tipo</option>
+                      <option value="ALUNO">Aluno</option>
+                      <option value="PROFESSOR">Professor</option>
+                    </select>
                   </div>
                 </div>
               </form>
