--- a/front/Html/Usuarios.html
+++ b/front/Html/Usuarios.html
@@ -54,9 +54,19 @@
       <div class="main-content">
         <div class="header">
           <h1 class="page-title"><i class="fas fa-user"></i> Usuários</h1>
-          <button class="logout-btn" onclick="window.location.href='Menu.html'">
-            <i class="fas fa-sign-out-alt"></i> Sair para Menu
-          </button>
+
+          <div class="header-buttons">
+            <button class="btn" id="theme-toggle-btn">
+              <i class="fas fa-moon"></i>
+            </button>
+
+            <button
+              class="logout-btn"
+              onclick="window.location.href='Menu.html'"
+            >
+              <i class="fas fa-sign-out-alt"></i> Sair para Menu
+            </button>
+          </div>
         </div>
 
         <div class="search-section">
