--- a/front/Html/Emprestimos.html
+++ b/front/Html/Emprestimos.html
@@ -14,11 +14,11 @@
   </head>
   <body>
     <div class="container">
-      <!-- Menu Lateral -->
       <div class="sidebar">
         <div class="logo">
           <h2>
-            <i class="fas fa-tools"></i> <span>Controle de Empréstimos</span>
+            <i class="fas fa-clipboard-list"></i>
+            <span>Controle de Empréstimos</span>
           </h2>
         </div>
         <div class="menu-item" onclick="window.location.href='Usuarios.html'">
@@ -48,25 +48,32 @@
         </div>
       </div>
 
-      <!-- Conteúdo Principal -->
       <div class="main-content">
         <div class="header">
           <h1 class="page-title">
             <i class="fas fa-history"></i> Histórico de Empréstimos
           </h1>
-          <button class="logout-btn" onclick="window.location.href='Menu.html'">
-            <i class="fas fa-sign-out-alt"></i> Sair para Menu
-          </button>
+
+          <div class="header-buttons">
+            <button class="btn" id="theme-toggle-btn">
+              <i class="fas fa-moon"></i>
+            </button>
+
+            <button
+              class="logout-btn"
+              onclick="window.location.href='Menu.html'"
+            >
+              <i class="fas fa-sign-out-alt"></i> Sair para Menu
+            </button>
+          </div>
         </div>
 
-        <!-- Mensagens de feedback -->
         <div
           id="feedback-message"
           class="feedback-message"
           style="display: none"
         ></div>
 
-        <!-- Filtros -->
         <div class="filters">
           <div class="filter-group">
             <label for="filter-user"><i class="fas fa-user"></i> Usuário</label>
@@ -99,7 +106,6 @@
           </div>
         </div>
 
-        <!-- Tabela de Empréstimos -->
         <div style="overflow-x: auto">
           <table class="loans-table">
             <thead>
@@ -115,7 +121,6 @@
               </tr>
             </thead>
             <tbody id="loans-table-body">
-              <!-- Dados serão carregados via JavaScript -->
               <tr>
                 <td colspan="8" style="text-align: center; padding: 20px">
                   Carregando empréstimos...
@@ -125,7 +130,6 @@
           </table>
         </div>
 
-        <!-- Paginação -->
         <div class="pagination">
           <button id="prev-page" disabled>
             <i class="fas fa-chevron-left"></i> Anterior
@@ -138,7 +142,6 @@
       </div>
     </div>
 
-    <!-- Modal de Detalhes do Empréstimo -->
     <div id="loan-details-modal" class="modal">
       <div class="modal-content">
         <div class="modal-header">
