--- a/front/Html/PostEmp.html
+++ b/front/Html/PostEmp.html
@@ -52,7 +52,7 @@
       <div class="main-content">
         <div class="header">
           <h1 class="page-title">
-            <i class="fas fa-hand-holding-usd"></i> Novo Empréstimo
+            <i class="fas fa-plus-circle"></i> Novo Empréstimo
           </h1>
 
           <div class="header-buttons">
