--- a/front/Html/Local.html
+++ b/front/Html/Local.html
@@ -16,7 +16,12 @@
     <div class="container">
       <div class="sidebar">
         <div class="logo">
-          <h2><i class="fas fa-map-marker-alt"></i> Sistema Locais</h2>
+          <img
+            src="../Assets/LogoFaceShield.png"
+            alt="Logo FaceShield"
+            class="sidebar-logo-img"
+          />
+          <h2>FaceShield</h2>
         </div>
         <div class="menu-item" onclick="window.location.href='Usuarios.html'">
           <i class="fas fa-user"></i> Usuários
@@ -32,6 +37,12 @@
           onclick="window.location.href='Ferramentas.html'"
         >
           <i class="fas fa-toolbox"></i> Ferramentas
+        </div>
+        <div
+          class="menu-item"
+          onclick="window.location.href='./HistoricoTrava.html'"
+        >
+          <i class="fas fa-history"></i> Histórico de Trava
         </div>
         <div
           class="menu-item active"
