--- a/front/Html/Usuarios.html
+++ b/front/Html/Usuarios.html
@@ -16,7 +16,12 @@
     <div class="container">
       <div class="sidebar">
         <div class="logo">
-          <h2><i class="fas fa-user"></i> Controle de Usuários</h2>
+          <img
+            src="../Assets/LogoFaceShield.png"
+            alt="Logo FaceShield"
+            class="sidebar-logo-img"
+          />
+          <h2>FaceShield</h2>
         </div>
         <div
           class="menu-item active"
@@ -39,6 +44,13 @@
           <i class="fas fa-toolbox"></i> Ferramentas
         </div>
 
+        <div
+          class="menu-item"
+          onclick="window.location.href='./HistoricoTrava.html'"
+        >
+          <i class="fas fa-history"></i> Histórico de Trava
+        </div>
+
         <div class="menu-item" onclick="window.location.href='Local.html'">
           <i class="fas fa-map-marker-alt"></i> Locais
         </div>
@@ -53,7 +65,9 @@
 
       <div class="main-content">
         <div class="header">
-          <h1 class="page-title"><i class="fas fa-user"></i> Usuários</h1>
+          <h1 class="page-title">
+            <i class="fas fa-user"></i> Controle de Usuários
+          </h1>
 
           <div class="header-buttons">
             <button class="btn" id="theme-toggle-btn">
@@ -153,7 +167,7 @@
             <div class="modal-footer">
               <button class="btn" onclick="closeModal()">Cancelar</button>
               <button class="btn btn-primary" onclick="saveStudent()">
-                Salvar Usuário
+                Salvar
               </button>
             </div>
           </div>
