--- a/front/Html/Menu.html
+++ b/front/Html/Menu.html
@@ -48,6 +48,16 @@
         <p>Lista de ferramentas</p>
       </div>
 
+      <!-- Histórico de Trava -->
+      <div
+        class="menu-card"
+        id="historico-trava"
+        onclick="window.location.href='HistoricoTrava.html'"
+      >
+        <h2>Histórico de Trava</h2>
+        <p>Registro de travas</p>
+      </div>
+
       <!-- Locais -->
       <div
         class="menu-card"
