--- a/front/Html/Ferramentas.html
+++ b/front/Html/Ferramentas.html
@@ -211,6 +211,24 @@
       </div>
     </div>
 
+    <div id="location-modal" class="modal">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h2>Detalhes do Local</h2>
+          <button class="close-btn close-location-btn">&times;</button>
+        </div>
+        <div class="modal-body" id="location-details-body">
+          <div class="loading-spinner-container">
+            <div class="loading"></div>
+            Carregando informações...
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button class="btn" id="close-location-btn">Fechar</button>
+        </div>
+      </div>
+    </div>
+
     <div id="notification" class="notification"></div>
 
     <div id="loading-overlay" class="loading-overlay" style="display: none">
